fix: export pdf memory